# MauEyeCare

./: .env  .env.example  .gitignore  App.tsx  AppLayout.tsx  AuthContext.tsx  AuthGuard.tsx  DEPLOYMENT_SETUP.md  DEPLOY_INSTRUCTIONS.md  DOCTOR_USAGE_GUIDE.md  Dashboard.tsx  GOOGLE_DRIVE_TROUBLESHOOTING.md  InsightsPage.tsx  InventoryPage.tsx  LoginPage.tsx  MCP_INTEGRATION_GUIDE.md  MarketingDashboard.tsx  MauEyeCareLauncher.bat  MauEyeCareLauncher.spec  NewVisitPage.tsx  OAUTH_SETUP_GUIDE.md  OperationsDashboard.tsx  POSPage.tsx  PRESCRIPTIONS_ENHANCEMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PatientsPage.tsx  PrescriptionsPage.tsx  README  README.md  RoleGuard.tsx  SETUP.md  STREAMLIT_SECRETS_SETUP.md  SettingsPage.tsx  ShowcasePage.tsx  TESTING_GUIDE.md  ai_router.py  alembic.ini  api.ts  audit.py  (+63 more)
my-streamlit-app/: .gitignore  DEPLOY.md  DOCUMENTATION.md  GITHUB_SETUP.md  QUICK_START.md  README.md  README_PRIVACY.md  RUN_PROJECT.md  SECURITY_SETUP.md  SETUP.md  WHATSAPP_SETUP.md  install.bat  install.sh  privacy.html  pyproject.toml  requirements.txt  start_system.py  terms.html  use_case
my-streamlit-app/src/: DEPLOYMENT_FIX.md  QUICK_DEPLOY.md  QUICK_SETUP.md  README_MAIN.md  STREAMLIT_CLOUD_SETUP.md  app.py  app_camera_fixed.py  app_clean.py  app_complete.py  app_comprehensive_final.py  app_final.py  app_final_enhanced.py  app_final_with_product_page.py  app_with_camera.py  app_with_real_images.py  app_working_final.py  camera_app.py  config.py  db.py  eyecare.db  fix_whatsapp_token.py  get_google_tokens.py  get_phone_id.py  get_whatsapp_token.py  (+18 more)
(+115 files in other folders)
