[project]
name = "maueyecare"
version = "1.0.0"
description = "AI-powered optical center management system"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "fpdf2>=2.7.0",
    "requests>=2.31.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "schedule>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]